<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG_color">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="11dp"
        android:layout_gravity="center"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_1_5"
            android:layout_gravity="center"
            android:layout_marginStart="140dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:background="@drawable/vtorooy2"
            android:contentDescription="@string/Almaz" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/line_black"
        android:layout_gravity="center"
        android:layout_marginTop="41dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_subject_9"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="11dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fotki"
        android:layout_marginTop="57dp"
        android:layout_gravity="center"
        android:contentDescription="@string/bottom_sheet_behavior" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/footer"
        android:layout_marginTop="61dp"
        android:layout_gravity="center"
        android:contentDescription="@string/Stream" />


</LinearLayout>